# internal/infra/http/handler/user_handler.go
@@ -19,6 +19,35 @@ func NewUserHandler(va *validation.Validator, uc *user.Usecase) *UserHandler {
 	}
 }
 
+// Create swaggo annotation.
+//
+//	@Summary		Create a new user
+//	@Description	Create a new user
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			body	body		user.CreateRequest	true	"Create request"
+//	@Success		200		{object}	response.Response
+//	@Failure		400		{object}	response.Response
+//	@Failure		500		{object}	response.Response
+//	@Router			/users [post]
+func (h *UserHandler) Create(ctx echo.Context) error {
+	req := new(user.CreateRequest)
+	err := ctx.Bind(req)
+	if err != nil {
+		return ctx.JSON(response.BadRequest(err))
+	}
+	err = h.va.Validate(req)
+	if err != nil {
+		return ctx.JSON(response.BadRequest(err))
+	}
+	res, err := h.uc.Create(ctx.Request().Context(), req)
+	if err != nil {
+		return ctx.JSON(response.Error(err))
+	}
+	return ctx.JSON(response.Success(res))
+}
+
 // GetByUsername swaggo annotation.
 //
 //	@Summary		Get logged in user
