# internal/usecase/authentication/dto.go
@@ -1,7 +1,7 @@
 package authentication
 
 type LoginRequest struct {
-	Username string `json:"username" validate:"required,min=2,max=100"`
+	Username string `json:"username" validate:"required,min=3,max=100"`
 	Password string `json:"password" validate:"required,min=8,max=100"`
 }
 
